# trading_stack_py

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .psprofile.ps1  .ruff.toml  Makefile  README.md  backtest_run.py  best_params.csv  best_params_C.csv  best_params_alpha.csv  best_params_prefilled.csv  git_repo_snapshot.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run_daily.py  run_econo.py  sample.env  seed_csv_data.py  seed_from_watchlist.py  seed_fx_data.py
.github/workflows/: ci.yml
app/: dashboard.py
config/: aggressive.json  baseline.json  capacity_policy.backup.yaml  change_control.yaml  config.yaml  config_commodities.yaml  config_fx.yaml  event_rules.yaml  kill_switch.yaml  kill_switch.yaml.bak_20251025_172204.yaml  macro_gates.yaml  policy_w1.yaml  policy_w2.yaml  reporting.toml  rolling.json  run.yaml  script_info_map.yaml  strategy.yml  w4_atr.yaml
config/lists/: list2_conviction.csv  list3_quality.csv
data/: toy_prices.csv
data/csv/: BALKRISIND.NS.csv  BZ=F.csv  CL=F.csv  COROMANDEL.NS.csv  EURUSD=X.csv  FCL.NS.csv  GBPUSD=X.csv  GC=F.csv  HG=F.csv  (+12 more)
docs/: ANCHOR_SCRIPTS.md  ARCHITECTURE.md  BUILD_TRACKER.md  CHANGELOG.md  LIVING_BLUEPRINT.md  SCRIPTS_LIVING.md  aggressive_year_policy.md  benchmarks.md  capacity_policy.md  change_log_template.md  data_lineage.md  execution_profiles.md  kill_switch_matrix.md  master_plan_w0_w44.md  policy_gates.md  pretrade_checklist.md  process_notes.md  progress.yml  research_to_prod_policy.md  w2a_kite_data_toggle.md  wk44_redteam_report.md
econo/: diagnostics.py  forecast.py
pipelines/: README.md  train_models.py
pricing/: models.py  recommend.py  run_pricing.py
reports/: backtest_daily_equity.csv  backtest_summary.csv  benchmarks.csv  buylist_2025-09-11.csv  buylist_2025-09-14.csv  wk0_gates.csv  wk1_entry_exit_baseline.csv  wk3_turnover_policy.json  wk3_turnover_profile.csv  wk4_atr_stops.csv  wk4_voltarget_stops.csv
scripts/: Add-TrackerChangelog.ps1  Archive-Reports.ps1  Audit-Project.ps1  AuditAndClean.ps1  Build-LivingTracker.ps1  Clean-Redundant.ps1  Cleanup-Repo.ps1  Compare-LatestRuns.ps1  Compare-Pick.ps1  Compute-RollingMetrics.ps1  Create-SessionShortcut.ps1  Enforce-Structure.ps1  Fix-Ruff-Set2.ps1  Fix-Ruff-Set3.ps1  Fix-Ruff-Set3b.ps1  Fix-Ruff-Set3c.ps1  Fix-Ruff.ps1  Get-RepoSnapshot.ps1  Make-DailyReport.ps1  Make-FactorExposures.ps1  Make-RollingMetrics.ps1  Make-Week.ps1  Open-BuildTracker.ps1  PhaseOut-CSV.ps1  Plot-Rolling.ps1  Prep-KiteScaffold.ps1  Quick-CI.ps1  Rename-Reports.ps1  Report-PortfolioV2.ps1  Restore-Files.ps1  Run-Baseline.ps1  Run-Module.ps1  Run-Pipeline.ps1  Run-SynthV2.ps1  Run-W3W4.ps1  Run-W5.ps1  Run-W6.ps1  Scan-MetricsExports.ps1  Show-DataSource.ps1  Test-Kit.ps1  (+207 more)
src/: backtest.py  data_io.py  indicators.py  metrics.py  portfolio.py  signals.py
tests/: test_backtest_smoke.py  test_cli_smoke.py  test_dsr.py  test_embargo.py  test_mtl.py  test_turnover_guard_exists.py  test_w10_forecast_eval.py  test_w11_alpha_blend.py  test_w6_portfolio_compare.py  test_w6_portfolio_lane.py  test_w7_modeling.py  test_w8_tune.py  test_w9_eval.py  test_walkforward.py
tools/: Audit-W0W44.ps1  Housekeep-Reports.ps1  Report-Portfolio.ps1  Report-PortfolioV2.ps1  Run-DSR.ps1  Update-Anchor.ps1  _make_toy_w6.py  add_date_if_missing.py  bootstrap.py  build_catalog.py  build_factors.py  build_portfolio.py  compare_runs.py  compare_runs.py.bak  compare_runs_fallback.py  compare_runs_fallback.py.bak  compute_turnover.py  dsr_pbo.py  emit_run_manifest.py  export_parquet_csv.py  export_parquet_html.py  generate_synth_data.py  kite_cache_stub.py  make.ps1  make_anchor.py  make_attribution.py  make_factor_exposures.py  make_rolling_metrics.py  make_synth_prices.py  make_tearsheet.py  normalize_weights.py  parquet_has_date.py  peek_cols.py  pilot_backtest.py  plot_report.py  plot_rolling_metrics.py  print_metrics.py  read_reporting_config.py  repartition_year_symbol.py  report_portfolio_synth_v2.py  (+11 more)
tradingstack/: __init__.py
(+159 files in other folders)
