[project]
name = "trading-stack-py"
version = "0.0.1"
description = "Walk-forward CV + Deflated Sharpe Ratio utilities for trading research"
readme = "README_W5.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# ---------------- formatting / linting ----------------

[tool.black]
required-version = "25.9.0"
line-length = 100
target-version = ["py311"]
exclude = '''
/(
  \.git
| \.venv
| build
| dist
| data
| reports
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
extend-ignore = ["E501"]  # Let the formatter handle line length

# (Optional) if you want to keep a *.backup.py around without fixing it:
# [tool.ruff.lint.per-file-ignores]
# "scripts/*.backup.py" = ["E501", "E701", "E702", "E741"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[project.scripts]
trading-stack = "trading_stack_py.cli:main"
trading-stack-portfolio = "trading_stack_py.portfolio_cli:main"


